<resources>
    <string name="app_name">FreeChat</string>
    <string name="lbl_login">LOGIN</string>
    <string name="lbl_register">REGISTER</string>
    <string name="lbl_email">email</string>
    <string name="lbl_password">password</string>
    <string name="lbl_confirm_password">confirm password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="logout">Logout</string>
    <string name="submit">submit</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
</resources>
