<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#59ABE3"
    tools:context="com.example.aman.freechat.ui.activities.LoginActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="4dp"
        android:id="@+id/card"
        app:cardElevation="3dp"
        android:layout_margin="@dimen/_30sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_320sdp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_height="@dimen/_40sdp">

                <View
                    android:layout_width="@dimen/_8sdp"
                    android:layout_height="match_parent"
                    android:background="#22A7F0"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#757D75"
                    android:text="@string/lbl_login"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:paddingEnd="@dimen/_30sdp"
                android:paddingStart="@dimen/_30sdp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    android:id="@+id/email"
                    android:textColorHint="#757D75">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edit_email"
                        android:textColor="#6C7A89"
                        android:textCursorDrawable="@drawable/cursor_bg"
                        android:inputType="textEmailAddress"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingEnd="@dimen/_5sdp"
                        android:textSize="@dimen/_12sdp"
                        android:hint="@string/lbl_email"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:paddingEnd="@dimen/_30sdp"
                android:paddingStart="@dimen/_30sdp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    android:id="@+id/password"
                    app:errorEnabled="true"
                    android:textColorHint="#757D75">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edit_password"
                        android:textColor="#6C7A89"
                        android:textCursorDrawable="@drawable/cursor_bg"
                        android:inputType="textPassword"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingEnd="@dimen/_5sdp"
                        android:textSize="@dimen/_12sdp"
                        android:hint="@string/lbl_password"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="@dimen/_96sdp"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_50sdp"
                app:cardCornerRadius="5dp"
                android:id="@+id/login"
                app:cardElevation="5dp"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/_12sdp"
                    android:gravity="center"
                    android:text="@string/lbl_login"
                    android:textColor="#6C7A89"/>

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:id="@+id/reset_password"
                android:layout_gravity="center"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_10sdp"
                android:textColor="#757D75"
                android:text="@string/forgot_password"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:id="@+id/fab_register"
        android:src="@drawable/sign_up"
        android:transitionName="loginFab"
        android:layout_alignEnd="@+id/card"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="-20dp"
        android:layout_alignTop="@+id/card"/>

</RelativeLayout>
