<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#59ABE3"
    tools:context="com.example.aman.freechat.ui.activities.LoginActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="4dp"
        android:id="@+id/card"
        app:cardElevation="3dp"
        android:layout_margin="@dimen/_30sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_320sdp"
            android:background="@color/colorAccent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_30sdp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:text="@string/lbl_register"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:paddingEnd="@dimen/_30sdp"
                android:paddingStart="@dimen/_30sdp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel"
                    app:errorEnabled="true"
                    android:id="@+id/email"
                    android:textColorHint="#ffffff">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edit_email"
                        android:textColor="#ffffff"
                        android:textColorHint="#ffffff"
                        android:textCursorDrawable="@drawable/cursor_bg_yellow"
                        android:inputType="textEmailAddress"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingEnd="@dimen/_5sdp"
                        android:textSize="@dimen/_12sdp"
                        android:hint="@string/lbl_email"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/_30sdp"
                android:paddingStart="@dimen/_30sdp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel"
                    app:passwordToggleEnabled="true"
                    android:id="@+id/password"
                    app:errorEnabled="true"
                    android:textColorHint="#ffffff">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edit_password"
                        android:textColor="#ffffff"
                        android:textColorHint="#ffffff"
                        android:textCursorDrawable="@drawable/cursor_bg_yellow"
                        android:inputType="textPassword"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingEnd="@dimen/_5sdp"
                        android:textSize="@dimen/_12sdp"
                        android:hint="@string/lbl_password"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/_30sdp"
                android:paddingStart="@dimen/_30sdp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel"
                    app:errorEnabled="true"
                    android:id="@+id/confirm_password"
                    app:passwordToggleEnabled="true"
                    android:textColorHint="#ffffff">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edit_confirm_password"
                        android:textColor="#ffffff"
                        android:textColorHint="#ffffff"
                        android:textCursorDrawable="@drawable/cursor_bg_yellow"
                        android:inputType="textPassword"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingEnd="@dimen/_5sdp"
                        android:textSize="@dimen/_12sdp"
                        android:hint="@string/lbl_confirm_password"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="@dimen/_96sdp"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                android:id="@+id/register"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/_12sdp"
                    android:gravity="center"
                    android:text="@string/lbl_register"
                    android:textColor="@color/colorAccent"/>

            </android.support.v7.widget.CardView>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:id="@+id/fab_cancel"
        android:src="@drawable/cancel"
        android:transitionName="loginFab"
        android:layout_marginTop="-25dp"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/card"/>

</RelativeLayout>
